# first-crud-endpoint

./: .gitignore  Dockerfile  README.MD  docker-compose.yaml
server/: .env  .env.example  db.py  main.py  pyproject.toml  tasks_route.py
server/db/: tasks.db  tasks.db-journal
